Closed
Bug 237249
Opened 22 years ago
Closed 21 years ago
Accessible name of web location combo box is too long
Categories
(Core :: Disability Access APIs, defect, P2)
Tracking
()
RESOLVED
FIXED
People
(Reporter: do, Assigned: aaronlev)
References
Details
(Keywords: access)
Attachments
(2 files, 2 obsolete files)
|
5.55 KB,
patch
|
mconnor
:
review+
neil
:
superreview+
|
Details | Diff | Splinter Review |
|
8.67 KB,
patch
|
pkwarren
:
review+
bryner
:
superreview+
dveditz
:
approval1.8b+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.6) Gecko/20040311
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.6) Gecko/20040311
The accessible name of the combo box where we insert the URL for navigation is
too long.
It should be 'web location' or an other appropriate value, but much shorter than
its actual name.
Reproducible: Always
Steps to Reproduce:
1.Launch gnopernicus and turn on the speech
2.Launch mozilla
3.Focus the web location combobox
Assignee: general → aaronleventhal
Blocks: gnoper
Component: Browser-General → Accessibility APIs
QA Contact: general → core.accessibility-apis
| Assignee | ||
Comment 1•22 years ago
|
||
True -- that really is annoying, and shouldn't be hard to fix.
One solution would be to use the tooltiptext when it's there. In this case
that's "Enter search term, keyword or web address", but perhaps that's also too
long.
If we want something like "web location" or "address" then we have to manually
set the accessible name for this particular control. I'm not sure we have a way
for such fine tuning at the moment. Needs investigation.
Kyle, do you have any ideas?
Blocks: aix-access
I think it's time to do some special work for the URL bar, not only the name,
but also the role, action etc. It's a very important widget that we must make it
work pretty good.
CCing Louie.
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Updated•22 years ago
|
Priority: -- → P2
| Assignee | ||
Comment 3•21 years ago
|
||
Attachment #173897 -
Flags: superreview?(neil.parkwaycc.co.uk)
Comment 4•21 years ago
|
||
So how does this title attribute work?
| Assignee | ||
Comment 5•21 years ago
|
||
If we see a tooltiptext or title attribute is present we'll use it for the
accessible name for an object. If the title attribute is not official XUL then
we can change these to be tooltiptext.
However, I do see the title attribute is present in browser.xul right above
where I'm adding it:
http://lxr.mozilla.org/seamonkey/source/browser/base/content/browser.xul#204
| Assignee | ||
Comment 6•21 years ago
|
||
Attachment #173897 -
Attachment is obsolete: true
Attachment #173947 -
Flags: superreview?(neil.parkwaycc.co.uk)
| Assignee | ||
Updated•21 years ago
|
Attachment #173897 -
Flags: superreview?(neil.parkwaycc.co.uk)
Comment 7•21 years ago
|
||
Comment on attachment 173947 [details] [diff] [review]
Use hidden label instead of title attribute which is only legal on toolbaritem
sr=me for xpfe
Attachment #173947 -
Flags: superreview?(neil.parkwaycc.co.uk) → superreview+
| Assignee | ||
Updated•21 years ago
|
Attachment #173947 -
Flags: review?(mconnor)
Comment 8•21 years ago
|
||
Comment on attachment 173947 [details] [diff] [review]
Use hidden label instead of title attribute which is only legal on toolbaritem
r=me, but I'd like to see you do something with the really long lines.
Comments especially can wrap, if you're going past the de facto margin. Some
of these are 25-30 chars past the next longest line.
Attachment #173947 -
Flags: review?(mconnor) → review+
| Assignee | ||
Comment 9•21 years ago
|
||
Philip, I'm seeking r= for the non-chrome parts
The chrome parts are already reviewed.
Attachment #173967 -
Flags: review?(pkwarren)
| Assignee | ||
Comment 10•21 years ago
|
||
From IRC, Neil wrote:
aaronlev: you can write r+sr because the changes are so small
So all we need now is r= and sr= for C++ changes (and a= for whole patch if we
can get it).
| Assignee | ||
Comment 11•21 years ago
|
||
Attachment #173967 -
Attachment is obsolete: true
Attachment #173977 -
Flags: review?(pkwarren)
| Assignee | ||
Updated•21 years ago
|
Attachment #173967 -
Flags: review?(pkwarren)
Updated•21 years ago
|
Attachment #173977 -
Flags: review?(pkwarren) → review+
Updated•21 years ago
|
Attachment #173977 -
Flags: superreview+
| Assignee | ||
Updated•21 years ago
|
Attachment #173977 -
Flags: superreview?(bryner)
| Assignee | ||
Updated•21 years ago
|
Attachment #173977 -
Flags: superreview?(bryner) → approval1.8b?
Comment 12•21 years ago
|
||
Comment on attachment 173977 [details] [diff] [review]
Uncomment 2 lines that were accidentally commented out
a=dveditz for 1.8b
Attachment #173977 -
Flags: approval1.8b? → approval1.8b+
| Assignee | ||
Comment 13•21 years ago
|
||
Checking in accessible/src/base/nsRootAccessible.cpp;
/cvsroot/mozilla/accessible/src/base/nsRootAccessible.cpp,v <--
nsRootAccessible.cpp
new revision: 1.108; previous revision: 1.107
done
Checking in layout/xul/base/public/nsIMenuFrame.h;
/cvsroot/mozilla/layout/xul/base/public/nsIMenuFrame.h,v <-- nsIMenuFrame.h
new revision: 1.14; previous revision: 1.13
done
Checking in layout/xul/base/src/nsBoxFrame.cpp;
/cvsroot/mozilla/layout/xul/base/src/nsBoxFrame.cpp,v <-- nsBoxFrame.cpp
new revision: 1.267; previous revision: 1.266
done
Checking in layout/xul/base/src/nsBoxFrame.h;
/cvsroot/mozilla/layout/xul/base/src/nsBoxFrame.h,v <-- nsBoxFrame.h
new revision: 1.91; previous revision: 1.90
done
Checking in layout/xul/base/src/nsMenuBarFrame.cpp;
/cvsroot/mozilla/layout/xul/base/src/nsMenuBarFrame.cpp,v <-- nsMenuBarFrame.cpp
new revision: 1.130; previous revision: 1.129
done
Checking in layout/xul/base/src/nsMenuFrame.cpp;
/cvsroot/mozilla/layout/xul/base/src/nsMenuFrame.cpp,v <-- nsMenuFrame.cpp
new revision: 1.286; previous revision: 1.285
done
| Assignee | ||
Updated•21 years ago
|
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 14•21 years ago
|
||
Corrected checkin info:
Checking in toolkit/content/widgets/autocomplete.xml;
/cvsroot/mozilla/toolkit/content/widgets/autocomplete.xml,v <-- autocomplete.xml
new revision: 1.37; previous revision: 1.36
done
Checking in xpfe/browser/resources/content/navigator.xul;
/cvsroot/mozilla/xpfe/browser/resources/content/navigator.xul,v <-- navigator.xul
new revision: 1.426; previous revision: 1.425
done
Checking in xpfe/browser/resources/locale/en-US/navigator.dtd;
/cvsroot/mozilla/xpfe/browser/resources/locale/en-US/navigator.dtd,v <--
navigator.dtd
new revision: 1.179; previous revision: 1.178
done
Checking in accessible/src/base/nsAccessibilityAtomList.h;
/cvsroot/mozilla/accessible/src/base/nsAccessibilityAtomList.h,v <--
nsAccessibilityAtomList.h
new revision: 1.13; previous revision: 1.12
done
Checking in accessible/src/base/nsAccessible.cpp;
/cvsroot/mozilla/accessible/src/base/nsAccessible.cpp,v <-- nsAccessible.cpp
new revision: 1.129; previous revision: 1.128
done
You need to log in
before you can comment on or make changes to this bug.
Description
•