Bug 237249. Accessible Name, role and value of URL bar and search field broken. r=pkwarren on accessibility module, r=mconnor for toolkit changes, r+sr=Neil for xpfe changes, sr=bryner for accessibility module changes, a=dveditz